# PhotoPrism-AI-Tagger

./: .env1  .gitignore  Dockerfile.cpu  README.md  constants.py  detection.py  job_queue.py  pyproject.toml  requirements.txt  utils.py  worker.py
.circleci/: config.yml
