[project]
name = "photo-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "timm>=1.0.15",
    "transformers==4.49.0",
    "ultralytics>=8.3.94",
]
